welcome.lessons.welcome.variables.Variables.scala.error
Variables:4: error: not found: value estSurBisuit
while (!estSurBisuit()){
        ^