welcome.lessons.welcome.variables.Variables.scala.code
var nbPas:Int=0
var dejaFait:Int=0

while (!estSurBisuit()){
  avance()
  nbPas+=1
}
prendBiscuit()
while (dejaFait!=nbPas){
  recule()
  dejaFait+=1
}

poseBiscuit()